Linea 1 ia kasik listo

--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -59,7 +59,7 @@
                                     <span ng-if="orden.badutstock == 1" class="badge glyphicon glyphicon-fire">OJO!</span>
 
                                     <span 
-                                        data-miid="{{ orden.id }}"
+                                        data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
                                         data-turno="1"
                                         data-linea="1"
