--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -927,6 +927,6 @@
     </div>
 </div>
 
-<div class="row" style="display: visible;">
+<div class="row">
     <highchart id="chart1" config="chartConfig" class="span10"></highchart>
 </div>
